hphp/hack/test/typecheck/magic_methods/magic_call.php.exp
File "magic_call.php", line 4, characters 3-31:
Magic `__call` methods are no longer supported (Parsing[1002])
