hphp/hack/test/typecheck/magic_methods/magic_call.php
<?hh

class C {
  public function __call():void {}
}
